# research-database

./: .gitignore  =0.5.0  PROJECT_STATUS_AND_PLAN.md  README.md  REFACTORING_SUMMARY.md  TEST_SUITE_SUMMARY.md  app.py  check_models.py  context_for_llms.md  index.html  methodology_observations.json  pyproject.toml  questions_for_model.txt  requirements.txt  run_app.py  streamlit_agent.py  streamlit_app.py  test_claude_agent.py  test_comprehensive_suite.py  test_elasticsearch_mapping.py  test_env.py  test_offset.py
docs/: STREAMLIT_CHAT_AGENT_SUMMARY.md
examples/: LiteLLM-APIcalls.ipynb  basic_usage.py
research_agent/: __init__.py  test_integration.py
research_agent/core/: __init__.py  agent_manager.py  memory_manager.py  memory_singleton.py  methodology_logger.py  models.py  old_workflow.py  state.py  workflow.py
research_agent/old_prompts/: memory_aware_execution_prompt.txt
research_agent/prompts/: __init__.py  batched_planning_prompt.txt  context_aware_prompt.txt  execution_prompt.txt  executor_prompt.txt  memory_aware_execution_prompt.txt  planner_system_prompt.txt  planning_prompt.txt  replanner_prompt.txt  replanning_prompt.txt  standard_execution_prompt.txt  standard_planning_prompt.txt  standard_replanning_prompt.txt
research_agent/tools/: __init__.py
research_agent/tools/search/: registry.py  unified_search.py
research_agent/tools/search/base/: elasticsearch_tool.py  models.py
research_agent/tools/search/persons/: tool.py
research_agent/tools/search/projects/: tool.py
research_agent/tools/search/publications/: models.py  tool.py
research_agent/tools/search/query_builders/: elasticsearch.py
research_agent/utils/: config.py
src/research_agent/: __init__.py  cli.py
src/research_agent/agents/: __init__.py  executor.py  planner.py
src/research_agent/core/: fast_path_workflow.py  hybrid_router.py  models.py  prompt_loader.py  query_classifier.py  state.py  workflow.py
src/research_agent/prompts/: context_aware_prompt.txt  executor_prompt.txt  planner_system_prompt.txt  replanner_prompt.txt  standard_planning_prompt.txt  task_format_template.txt
src/research_agent/tools/: elasticsearch_tools.py
src/research_agent/utils/: __init__.py  logging.py
templates/: index.html
tests/: conftest.py  debug_search_tools.py  find_litellm_endpoint.py  test_anna_dubois_search.py  test_complete_workflow.py  test_fast_path_workflow.py  test_fixed_search_tools.py  test_hybrid_router.py  test_langchain_proxy.py  test_litellm_connection.py  test_litellm_direct.py  test_litellm_simple.py  test_pydantic_fix.py  test_query_classifier.py  test_session.py  test_streamlit_integration.py  test_sync_fixes.py  test_tools_isolation.py  test_url_formats.py  test_utils.py  test_workflow_routing.py
tests/streamlit/: test_error_handling.py  test_streamlit_langraph_integration.py
tests/tools/: conftest.py  test_edge_case_resilience.py  test_elasticsearch_tools_comprehensive.py  test_end_to_end_workflows.py
tests/unit/: test_models.py
